src/sections/about/About.scss
.about {
    transition: var(--transition);
    align-items: center;
    justify-content: center;
    display: flex;
    gap: 5rem;
    flex-wrap: wrap;
    align-content: center;

    &__left{
        width: 50%;

         /* MEDIA QUERIES (tablets portrait) */
         @media screen and (max-width: 56.5em) {
            width: 100%;
         }
    }

    &__header {
        text-align: center;
        display: block;
    }

    &__container {
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 5rem;

        /* MEDIA QUERIES (phone) */
        @media screen and (max-width: 56.5em) {
        flex-direction: column-reverse;
        }

    }

    &__content {
        font-family: openSans;
        align-self: end;
        font-size: 1.6rem;
        padding: 2rem;
        border: 0;
        overflow: hidden;
    }

    &__right{
        align-items: center;
    }

    &__image{
        width: 20rem;
        height: 20rem;
        position: relative;

        & img {
            position: absolute;
            top: -30px;
            left: -15px;
            z-index: 10;
        }
    }
}

